# asteroids

./: .gitignore  README.md  asteroid.py  circleshape.py  devenv.nix  main.py  player.py  pyproject.toml  requirements.txt
