[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["nmeusling <15682036+nmeusling@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
